<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Skill Manager</string>

    <string name="seach_skill_edittext">Type a name or skill</string>

    <string name="skill_name_hint">Skill Name</string>
    <string name="skill_description_hint">Skill Description</string>
    <string name="learn_more">Learn more</string>
    <string name="skill_learn_more_hint">Learn more (web url)</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="image_picker_text">Select Image</string>
    <string name="error_image_upload">Error while uploading image.</string>
    <string name="new_skill">New Skill</string>
    <string name="new_skills">New Skills</string>
    <string name="new_collaborator">New Collaborator</string>
    <string name="skill_image_content_description">An image of the skill.</string>
    <string name="camera_image_description">A little image of a camera.</string>

    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="birthdate_cannot_be_empty">Birthdate cannot be empty.</string>
    <string name="role_cannot_be_empty">Role cannot be empty.</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty.</string>

    <string name="description_cannot_be_empty">Description cannot be empty.</string>
    <string name="learn_more_cannot_be_empty">Learn more cannot be empty.</string>
    <string name="picture_cannot_be_empty">Picture cannot be empty.</string>

    <string name="skill_successfully_saved">Skill successfully saved!</string>
    <string name="succesful_deleted">Successful deleted</string>
    <string name="error_deleting">Erro while deleting <xliff:g id="string">%s</xliff:g></string>
    <string name="cannot_delete_skill_being_used">Cannot delete skill <xliff:g id="string">%s</xliff:g>! It\'s being used by some collaborator.</string>

    <string name="main_pager_invalid_position">Invalid fragment position: <xliff:g id="position">%d</xliff:g></string>
    <string name="no_skills_available">No skills available</string>
    <string name="main_pager_title_skills">Skills</string>

    <string name="main_pager_title_collaborators">Collaborators</string>
    <string name="no_collaborators_available">No collaborators available</string>

    <string name="change">Change</string>
    <string name="skill_pic_optimal_size">Optimal size:\n 800 x 600</string>
    <string name="collab_pic_optimal_size">Optimal size:\n 800 x 800</string>

    <string name="wait_img_upload">Image being uploaded.\nWait a few seconds please.</string>

    <string name="attention">Atention!</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>

    <string name="do_you_want_to_delete">Do you want to delete <xliff:g id="string">%s</xliff:g></string>

    <string name="unable_to_handle_actionview">Unable to handle ACTION_VIEW, URL: <xliff:g id="url">%s</xliff:g></string>

    <string name="error_while_updating_widget">Error while updating widget</string>

    <string name="content_authority">study.pmoreira.skillmanager</string>
    <string name="error_unknown_uri">Cannot query unknown URI: <xliff:g id="unknown_uri">%s</xliff:g></string>
    <string name="error_provider_operation_not_supported"><xliff:g id="operation">%s</xliff:g> not supported for <xliff:g id="uri">%s</xliff:g></string>
    <string name="error_insertion_failed">Failed to insert row for <xliff:g id="error_insertion">%s</xliff:g></string>
    <string name="field_required">Field required: <xliff:g id="field_name">%s</xliff:g></string>

    <string name="collab_name_hint">Name</string>
    <string name="collab_role_hint">Role</string>
    <string name="collab_email_hint">Email</string>
    <string name="collab_phone_hint">Phone</string>
    <string name="collab_birthdate_hint">Birth date</string>
    <string name="collab_image_content_description">A picture of the collaborator.</string>

    <string name="collaborator_successfully_saved">Collaborator successfully saved!</string>
    <string name="ask_permision_read_contacts_title">Permission to read contacts</string>
    <string name="ask_permision_read_contacts_message">Your contacts names we\'ll be used to provide you a btter experience with the app.</string>
    <string name="confirm_birthdate">Confirm your birthdate, please</string>
    <string name="skills">Skills</string>
    <string name="dismiss">dismiss</string>
    <string name="add_skill">add skill</string>
    <string name="nothing_selected">Nothing selected</string>

    <string name="transition_skill">transition_skill</string>
    <string name="transition_collab">transition_collab</string>

</resources>
